# micro-torch

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build.sh
include/: includes.hpp  kernels.hpp  storage.hpp  tensor.hpp  utilities.hpp
src/: kernels.cpp  main.cpp  tensor.cpp  utilities.cpp
tests/: CMakelists.txt
tests/unit/: auto_grad.cpp  basic_operation.cpp  main.cpp  simple_ml.cpp
